# nFrames

./: .gitignore  CMakeLists.txt  common.mk
include/: NFio.h  NFobjects.h  NFtime.h
inputs/: NCfunctions.c  NCfunctions.h  NCgrid.c
modules/: PETlib.c
nFrames.xcodeproj/: project.pbxproj
nFrames.xcodeproj/xcuserdata/balazs.xcuserdatad/xcschemes/: nFrames.xcscheme  xcschememanagement.plist
nbproject/: configurations.xml  project.xml
src/: NFcompAggregate.c  NFcompContainer.c  NFcompInput.c  NFcompModel.c  NFcompRegion.c  NFcontext.c  NFcoupler.c  NFdomain.c  NFexecute.c  NFio.c  NFlist.c  NFmain.c  NFmisc.c  NFmodDerivative.c  NFmodEquation.c  NFmodInterface.c  NFmodProcess.c  NFmodRoute.c  NFnumParameter.c  NFnumVariable.c  NFobjAlias.c  NFobjCategory.c  NFobjOutput.c  NFobjects.c  NFparse.c  NFplugin.c  NFreport.c  NFresolve.c  NFtime.c
xml/: nFrames.dtd  nFrames.xml
